# silvertine

./: .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  install-ta-lib.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup-silvertine.sh  test_ibapi.py
.github/workflows/: ci.yml
.kiro/specs/quantitative-trading-system/: design.md  requirements.md  tasks.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: design.md  trading-system-prd-v3-cn.md
.taskmaster/docs/research/: 2025-07-21_analyze-the-current-task-3-implementation-and-the.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  tasks.json
config/environments/: development.yaml.example
config/exchanges/: binance_testnet.yaml.example  interactive_brokers.yaml.example
config/risk/: risk_management.yaml.example
docs/: api.md  architecture.md  deployment.md  development.md
docs/claude/broker/: implementation-plan.md  modular-broker-interface-design.md  task3-wave-implementation-plan.md  tasks-2-3-gap-analysis.md  testing-guide.md
docs/claude/event/: event-driven-architecture-design.md  implementation-plan.md  verification-criteria.md
example/ibrokers/: run_ibrokers.py
silvertine/adapter/: base_adapter.py
silvertine/adapter/ibrokers/: ib_mappings.py  ibrokers.py
silvertine/app/: app.py
silvertine/core/: __init__.py  engine.py  event.py  monitoring.py  pipeline.py
silvertine/core/event/: __init__.py  event_bus.py  events.py
silvertine/core/redis/: __init__.py  redis_streams.py
silvertine/exchanges/: __init__.py  factory.py  iexchange.py
silvertine/exchanges/binance/: __init__.py  binance_broker.py
silvertine/exchanges/ib/: __init__.py  ib_broker.py
silvertine/exchanges/paper/: paper_broker.py
silvertine/server/: database.py  datafeed.py  engine.py
silvertine/util/: constants.py  converter.py  event_type.py  logger.py  object.py  settings.py  utility.py
tests/unit/: __init__.py
tests/unit/adapter/: __init__.py  test_adapter.py
tests/unit/core/: __init__.py  test_engine.py  test_event.py
tests/unit/core/event/: test_event_bus.py  test_events.py
tests/unit/core/monitoring/: test_monitoring.py
tests/unit/core/pipeline/: test_pipeline.py
tests/unit/core/redis/: test_redis_streams.py
tests/unit/exchanges/: test_broker_factory.py
tests/unit/exchanges/implementations/paper/: test_broker.py
tests/unit/exchanges/interfaces/: test_iexchange.py
tests/unit/util/: __init__.py  test_constants.py  test_event_type.py  test_object.py  test_settings.py  test_utility.py
